redactable/tests/ui/sensitive_legacy_formatting_rejected.stderr
error: formatting route overrides are only used by `SensitiveDisplay`; use `SensitiveDual` when structural and display redaction are both needed
 --> tests/ui/sensitive_legacy_formatting_rejected.rs:6:5
  |
6 |     #[redactable(legacy_formatting)]
  |     ^
