redactable/tests/ui/sensitive_legacy_formatting_rejected.rs
use redactable::Sensitive;

#[derive(Sensitive)]
struct StructuralOnly {
    #[sensitive(redactable::Secret)]
    #[redactable(legacy_formatting)]
    value: Option<String>,
}

fn main() {}
